# 3d-cellular-automata-bevy

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  rust.yml
src/: main.rs
