[package]
name = "cellular-automata"
version = "0.1.0"
edition = "2021"
authors = ["Janusz Piechówka"]
repository = "https://github.com/jpiechowka/3d-cellular-automata-bevy"
license = "MIT OR Apache-2.0"
description = "3D Cellular Automata in Bevy and Rust"
readme = "README.md"

[[bin]]
name = "3d-cellular-automata-bevy"
path = "src/main.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Release optimizations
[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[dependencies]
bevy = "0.12"
