[package]
name = "cellular-automata"
version = "0.1.0"
edition = "2021"
authors = ["Janusz Piechówka"]
repository = "https://github.com/jpiechowka/3d-cellular-automata-bevy"
license = "MIT OR Apache-2.0"
description = "3D Cellular Automata in Rust and Bevy"
readme = "README.md"

[[bin]]
name = "3d-cellular-automata-bevy"
path = "src/main.rs"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Release optimizations
[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[dependencies]
bevy = "0.12"
serde = "1.0.195"
rand = "0.8.5"
bevy-inspector-egui = { version = "0.22.1", optional = true }
colored = { version = "2.1.0", optional = true }

# Should be the same as Bevy dependencies
image = "0.25.0"
winit = "0.28.7"

[build-dependencies]
embed-resource = "2.4.1"
